# vut-ifj24

./: .gitignore  CMakeLists.txt  README.md  configure  makefile  rozdeleni
.github/workflows/: ci.yml
.run/: Template CMake Application.run.xml  test_bvs.run.xml  test_dynBuffer.run.xml  test_instructions.run.xml  test_lexer.run.xml  test_parser.run.xml  test_token.run.xml  vut_ifj.run.xml  vut_ifj_debug.run.xml
docs/: documentace.tex  documentation.tex  dokumentace.md  dokumentace.tex  grammar.txt
grammar/: Ifj24grammar.ods  grammar.txt
include/: ast.h  bvs.h  id_indexer.h  instructions.h  lexer.h  logging.h  parser.h  queue.h  semantics.h  stack.h  symtable.h  target_func_context.h  target_gen.h  token.h  types.h
include/lexer/: lexeme.h  lexer.h  token.h
include/parser/: parser.h  semantic_checks.h
include/structs/: ast.h  bvs.h  dynBuffer.h  symtable.h
include/target_gen/: id_indexer.h  instructions.h  target_func_context.h  target_func_scope.h  target_gen.h  target_gen_context.h  target_label_context.h
scripts/: add_authors.py  get_authors_str.sh  local_run_tests.sh  prepare_for_submission.sh  run_compiler_tests.sh  run_tests.sh
src/: CMakeLists.txt  logging.h  main.c
src/lexer/: CMakeLists.txt  lexeme.c  lexer.c  lexer.h  new_lexer.c  parser.c  token.c
src/parser/: CMakeLists.txt  parser.c  semantic_checks.c  semantics.c
src/structs/: CMakeLists.txt  ast.c  bvs.c  dynBuffer.c  queue.c  stack.c  symtable.c
src/target_gen/: CMakeLists.txt  id_indexer.c  instructions.c  target_func_context.c  target_func_scope.c  target_gen.c  target_label_context.c
submission/: Makefile
tests/: CMakeLists.txt  man_test_target_gen.c  test_bvs.c  test_dynBuffer.c  test_instructions.c  test_lexer.c  test_parser.c  test_token.c  test_utils.h
tests/compiler/: main.py  test_main.py
tests/input/: conditions.ifj24.zig  factorial_iter.ifj24.zig  hello_world.ifj24.zig  program.ifj24.zig  program.zig  read.ifj24.zig  stdfunc.ifj24.zig  stdlib_funcs.ifj24.zig
tests/input/syntax/: program.ifj24.zig  stdlib_funcs.ifj24.zig
tests/output/: out.ifjcode  sample.ifjc  tmp.ifjcode
